# Fractal-Down

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  LICENSE-APACHE  LICENSE-FRACTAL-DOWN  README.md  VERIFICATION.md  overview.md  pyproject.toml  refresh_benchmarks.py  requirements-bench.txt  requirements-dev.txt  requirements-test.txt  requirements-torch.txt  requirements.txt
.github/workflows/: ci.yml
artifacts/20250814_223816_bench/: results.csv  summary.json
artifacts/20250814_223922_bench/: results.csv  summary.json
artifacts/20250814_223945_bench/: results.csv  summary.json
artifacts/20250814_224040_bench/: results.csv  summary.json  system.json
artifacts/20250814_224141_bench/: results.csv  summary.json
artifacts/20250815_050305_bench/: results.csv  summary.json  system.json
bench/: __init__.py  graphs.py  metrics.py  persist.py  run_suite.py  scenarios.py  simple_charts.py  system_info.py
docs/: license_comparison.md  refresh_benchmarks.md
docs/internal_playbooks/: integration_consulting.md  training_workshops.md
enterprise/: pyproject.toml
enterprise/fractal_down_enterprise/: __init__.py
fractal_down/: __init__.py  api.py  binary_plan.py  cache.py  cli.py  dag.py  distributed_planner.py  evaluator.py  examples.py  features.py  fractal.py  gpu.py  hashing.py  license_key.py  treelift.py  version.py  visualization.py
fractal_down.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
marketing/: enterprise_pricing.md  news_and_press_release.md  support_agreements.md  whitepaper.md
tests/: test_api.py  test_bench_smoke.py  test_cache_and_binary_plan.py  test_dag.py  test_evaluator.py  test_examples.py  test_feature_toggle_fix.py  test_fractal.py  test_license_key.py  test_memory_improvements.py  test_multitenant_cache.py  test_requirements.py  test_treelift.py
trimble/: README.md  TECHNICAL_SECURITY.md  __init__.py  business_pitch_generator.py  comprehensive_proposal.json  comprehensive_proposal.md  generate_pitch.py  profit_analysis.py  profit_analysis_summary.py  proposal_generator.py  proposal_summary.md  trimble_profit_analysis.json  trimble_profit_analysis.md
trimble/case_study/: README.md  device_profiles.py  implementation_examples.py  market_research.py  trimble_case_study.md
trimble/examples/: __init__.py  agriculture.py  autonomy.py  construction.py  digital_twins.py  geospatial.py  mixed_reality.py  transportation.py  uav.py
trimble/reports/: __init__.py  benefits_analysis.py  integration_roadmap.py  kpi_mapping.py  technical_assessment.py
trimble/scenarios/: __init__.py  all_scenarios.py  construction_site_scenario.py  edge_deployment_scenario.py  fleet_telematics_scenario.py  precision_agriculture_scenario.py  survey_mapping_scenario.py
trimble/tests/: __init__.py  test_agriculture.py  test_autonomy.py  test_business_pitch_generator.py  test_construction.py  test_digital_twins.py  test_geospatial.py  test_mixed_reality.py  test_proposal_generator.py  test_transportation.py  test_uav.py
