[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fractal-down"
version = "0.1.0"
description = "Production-grade DAG evaluation with √N memory and fractal priority scheduling"
readme = "README.md"
license = {text = "Apache-2.0 OR FRACTAL-DOWN"}
authors = [
    {name = "Nicholas Woolridge & NOCTRL™ (Nô)"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
torch = ["torch"]
test = ["pytest>=6.0"]
bench = [
    "psutil>=5.9", 
    "matplotlib>=3.7", 
    "pandas>=2.0; python_version >= '3.10'", 
    "pynvml>=11.5; platform_system=='Linux' or platform_system=='Windows'", 
    "pyRAPL>=0.3; platform_system=='Linux'"
]

[project.urls]
Homepage = "https://github.com/nwoolr20/Fractal-Down"
Repository = "https://github.com/nwoolr20/Fractal-Down"
Issues = "https://github.com/nwoolr20/Fractal-Down/issues"
Documentation = "https://github.com/nwoolr20/Fractal-Down#readme"

[project.scripts]
fd = "fractal_down.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fractal_down*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--tb=short"
]