[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fractal-down-enterprise"
version = "0.1.0"
description = "Enterprise feature bundle for Fractal-Down"
dependencies = ["fractal-down"]

[tool.setuptools.packages.find]
where = ["."]
include = ["fractal_down_enterprise*"]
